--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
         <section id="places">
            
             <div class="place">
-                <h3>Taj Mahal, Agra</h3>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Taj_Mahal_%28Edited%29.jpeg" alt="Taj Mahal">
+                <h3>Taj Mahal, Agra</h3><a href="https://www.tajmahal.gov.in/" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Taj_Mahal_%28Edited%29.jpeg" alt="Taj Mahal"></a>
                 <p>The Taj Mahal is an ivory-white marble mausoleum on the south bank of the Yamuna river in the Indian city of Agra. It was commissioned in 1632 by the Mughal emperor Shah Jahan to house the tomb of his favorite wife, Mumtaz Mahal.</p>
             </div>
             <div class="place">
-                <h3>Qutub Minar, Delhi</h3>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiH9mOBAJVuzHOo9CDeOkW5zJ9Zk_tq0lWDA&s">
+                <h3>Qutub Minar, Delhi</h3><a href="https://whc.unesco.org/en/list/233/" target="_blank" rel="noopener noreferrer">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiH9mOBAJVuzHOo9CDeOkW5zJ9Zk_tq0lWDA&s"></a>
                 <p>The Qutub Minar is a minaret and "victory tower" that forms part of the Qutb complex, a UNESCO World Heritage Site in the Mehrauli area of Delhi, India. It is one of the most visited tourist spots in the city.</p>
             </div>
             <div class="place">
-                <h3>Hawa Mahal, Jaipur</h3>
-                <img src="https://lh5.googleusercontent.com/p/AF1QipNNCNn4A9ujrP0drFeNWF0ewQJllcIA7CuLUEmT=w270-h312-n-k-no" alt="hawamahal">
+                <h3>Hawa Mahal, Jaipur</h3><a href="https://www.hawa-mahal.com/" target="_blank" rel="noopener noreferrer"> 
+                <img src="https://lh5.googleusercontent.com/p/AF1QipNNCNn4A9ujrP0drFeNWF0ewQJllcIA7CuLUEmT=w270-h312-n-k-no" alt="hawamahal"></a>
                 <p>The Hawa Mahal is a palace in the city of Jaipur, Rajasthan, India. Built from red and pink sandstone, it is on the edge of the City Palace, Jaipur, and extends to the Zenana, or women's chambers.</p>
             </div>
         </section>
